<resources>
    <string name="app_name">PasswordManager</string>
    <string name="select_file">Select base file</string>
    <string name="select_path">Select folder for new base</string>
    <string name="choose_existing_base">Choose existing password base</string>
    <string name="choose_new_base">Choose folder for new base</string>
    <string name="use_default_dir">Use default base path</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="random">Random</string>
    <string name="random_pin">Random PIN</string>
    <string name="add_new_account">Add new password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="input_name_error">Input name</string>
    <string name="input_login_error">Input login</string>
    <string name="input_password_error">Input password</string>
    <string name="delete_title">Delete?</string>
    <string name="delete_msg">Delete account %1$s with login %2$s?</string>
    <string name="login_copied">Login %s copied to clipboard</string>
    <string name="password_copied">Password copied to clipboard</string>
    <string name="scan_qr">Scan QR-code</string>
    <string name="enter">Enter</string>
    <string name="write_permission_msg">Get write permission</string>
    <string name="write_permission_denied">Permission denied</string>
    <string name="input_key">Input key phrase</string>
    <string name="input_new_key">Create new key. It can be phrase, song or poem lyrics, address, name list, etc.\nRemember your key! If you forget your key, password base will be lost and can not be restored!!!</string>
    <string name="create_pin_title">Create pin?</string>
    <string name="create_pin_msg">You can remember key in app and input only PIN/</string>
    <string name="pin_retry">Retry over %d sec</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="create_pin">Create PIN</string>
    <string name="reenter_pin">Confirm new PIN</string>
    <string name="pins_not_equal">PINs are not equal!</string>
    <string name="reenter_key">Confirm new Key</string>
    <string name="keys_not_equal">Keys are not equal!</string>
    <string name="reset_pin_msg">Are you sure that you want to reset PIN? You have to input key of base instead.</string>
    <string name="incorrect_key">Key is incorrect!</string>
    <string name="unable_parse_base">Unable to read password base. Format error. Maybe it was corrupted.</string>
    <string name="unexpected_error">Unexpected error during working with base.</string>
    <string name="unable_to_read_file">Unable to read base file.</string>
    <string name="unable_to_edit_file">Unable to edit base file.</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="copied">Text copied to clipboard</string>
    <string name="keyboard_pref_title">Custom keyboard</string>
    <string name="keyboard_pref_msg">Custom keyboard provides better security. Turn off if you trust your default keyboard.</string>
    <string name="keyboard_pref">keyboard_pref</string>
    <string name="new_base_title">Exit current base</string>
    <string name="new_base_msg">Reselect password base or create new one.</string>
    <string name="new_base">new_base</string>
    <string name="change_pin">change_pin</string>
    <string name="change_pin_title">Change app PIN</string>
    <string name="change_pin_msg">Create new PIN for base access.</string>
    <string name="change_key_title">Change base key</string>
    <string name="change_key_msg">Encrypt base with new key.</string>
    <string name="change_key">change_key</string>
    <string name="settings">Settings</string>
    <string name="change_base_msg">Current base won\'t be deleted. PIN will be reset (if exist).</string>
    <string name="change_base_key">Current base will be encrypted with new key. Od key will be unavailable.</string>
</resources>
