<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:title="@string/keyboard_pref_title"
        android:defaultValue="true"
        android:summary="@string/keyboard_pref_msg"
        android:key="@string/keyboard_pref" />

    <Preference
        android:title="@string/new_base_title"
        android:summary="@string/new_base_msg"
        android:key="@string/new_base" />

    <Preference
        android:title="@string/change_pin_title"
        android:summary="@string/change_pin_msg"
        android:key="@string/change_pin" />

    <Preference
        android:title="@string/change_key_title"
        android:summary="@string/change_key_msg"
        android:key="@string/change_key" />

</PreferenceScreen>