<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <TextView
        android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_name"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_login"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/random_login" />
    </LinearLayout>

    <TextView
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_password"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/generate_random"
            android:layout_weight="1" />

        <Button
            android:text="@string/random_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/generate_random_pin"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:layout_weight="1" />

        <Button
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ok"
            android:layout_weight="1" />
    </LinearLayout>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"/>

</LinearLayout>